...
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="24dp"
        android:contentDescription="Event Sketch"
        android:src="@drawable/ether_gateway"
        app:layout_constraintTop_toBottomOf="@id/appSubtitle"
        app:layout_constraintBottom_toTopOf="@+id/loginMainButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/loginMainButton"
        android:layout_width="0dp"
...
